[package]
name = "one-command"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
description = "Execute commands on the Windows platform, without opening a window to maintain consistency with other system behaviors."
repository = "https://github.com/thlstsul/one-command"
keywords = ["CREATE_NO_WINDOW", "command", "async-process"]

[dependencies]
async-process = ">0"
